# marchingCubes

./: CMakeLists.txt  README.md
SYCL/: CMakeLists.txt
SYCL/src/: Grid.cpp  Grid.hpp  Isosurface.cpp  Isosurface.hpp  LookupTables.cpp  LookupTables.hpp  MarchingCubes.cpp  MarchingCubes.hpp  SYCLUtils.cpp  SYCLUtils.hpp  main.cpp
Sequential/code-review/: isosurface.md
Sequential/examples/: sphere.md
Sequential/include/: isosurface.hpp  types.hpp
Sequential/src/: grid.cpp  isosurface.cpp  main.cpp  test  test.cpp
Sequential/tests/: test_grid.cpp  test_isosurface.cpp
code-review/: isosurface.html  isosurface.md
include/: define.h  grid.hpp  isosurface.hpp  marching_cubes.hpp
src/: cubes  grid.cpp  isosurface.cpp  marchingCubes.cpp  marchingCubesSequential.cpp  marchingCubes_SYCL.cpp  marching_cubes.cpp  test_cubes
sycl/: defines.h  marching_cubes_kernel.cpp  tables.h
